# caturra

./: .gitignore  .prettierignore  Cargo.toml  README.md  coi-serviceworker.js  compat.html  eslint.config.mjs  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain.toml  tsconfig.base.json  tsconfig.json
.github/workflows/: ci.yml  deploy-pages.yml
apps/playground/: compat.html  index.html  package.json  vite.config.ts
apps/playground/scripts/: fetch-assets.py  fetch-sounds.py  generate-csa-levels.py  level-assets.json
apps/playground/src/: App.tsx  csa-index.ts  csa-levels.ts  csa-validators.ts  editor.ts  levels.ts  main.ts  main.tsx  neighborhood-levels.ts  neighborhood.ts  style.css  swing.ts  theater-assets.ts  theater-sounds.ts  theater.ts  vite-env.d.ts
apps/playground/src/compat/: Compat.tsx  compat.css  features.json  main.tsx
apps/playground/src/csa-units/: unit-0.ts  unit-1.ts  unit-2.ts  unit-3.ts  unit-4.ts  unit-5.ts  unit-6.ts  unit-7.ts  unit-8.ts
apps/sandbox/: index.html  package.json  vite.config.ts
apps/sandbox/src/: main.ts  vite-env.d.ts
assets/: caturra_bg-BCIDrub2.wasm  compat-BQKKn1mN.js  compat-CYm4ryCb.css  index-BSAVjmcX.js  index-CarpfGdD.css  src-BoKlOSI_.js  unit-0-Bv0jhl6m.js  unit-1-CAOzFbMs.js  unit-2-CrCj9Sm7.js  unit-3-ZuoLSSMU.js  unit-4-B3lduQ8c.js  unit-5-52EyBJzJ.js  unit-6-h6rZ9lDL.js  unit-7-fUPCuMoT.js  unit-8-CO1Bt4fu.js  worker-epazvdgA.js
crates/caturra-classfile/: Cargo.toml
crates/caturra-classfile/src/: exceptions.rs  lib.rs  model.rs
crates/caturra-compiler/: Cargo.toml
crates/caturra-compiler/src/: ast.rs  capture.rs  codegen.rs  diagnostics.rs  imports.rs  lambda.rs  lexer.rs  lib.rs  mock.rs  parser.rs
crates/caturra-compiler/src/stdlib/: arrays.java  easymock.java  function.java  junit.java  neighborhood.java  swing.java  theater.java  util.java  validation.java  validation_neighborhood.java
crates/caturra-vm/: Cargo.toml
crates/caturra-vm/examples/: compatrun.rs  nbhcheck.rs  shift.rs  u5l8.rs  valsweep.rs
crates/caturra-vm/src/: debug.rs  floatdec.rs  format.rs  interpreter.rs  intrinsics.rs  io.rs  lib.rs  map.rs  value.rs  vm.rs
crates/caturra-vm/tests/: compat_manifest.rs  differential.rs  differential_media.rs  differential_neighborhood.rs  differential_validation.rs  differential_validation_orgcode.rs  run_programs.rs  sketch_perf.rs
crates/caturra-wasm/: Cargo.toml
crates/caturra-wasm/src/: lib.rs
crates/jvmjs-classfile/: Cargo.toml
crates/jvmjs-classfile/src/: constant_pool.rs  debug.rs  exceptions.rs  lib.rs  opcodes.rs  reader.rs  writer.rs
crates/jvmjs-compiler/: Cargo.toml
crates/jvmjs-compiler/src/: ast.rs  capture.rs  codegen.rs  imports.rs  lambda.rs  lexer.rs  lib.rs  mock.rs  parser.rs
crates/jvmjs-compiler/src/stdlib/: arrays.java  easymock.java  junit.java  neighborhood.java  reflect.java  theater.java  validation.java  validation_neighborhood.java
crates/jvmjs-vm/: Cargo.toml
crates/jvmjs-vm/examples/: nbhcheck.rs
crates/jvmjs-vm/src/: debug.rs  floatdec.rs  format.rs  interpreter.rs  intrinsics.rs  io.rs  lib.rs  value.rs  vfs.rs  vm.rs
crates/jvmjs-vm/tests/: differential.rs  run_programs.rs
crates/jvmjs-wasm/: Cargo.toml
crates/jvmjs-wasm/src/: lib.rs
e2e/: compat.spec.ts  playground.spec.ts  sandbox.spec.ts
scripts/: deploy-pages.sh  fetch-test-jars.py
scripts/compat/: record.py  snippets.py
scripts/sweep/: README.md  build-reference.py  compare.py  reference.py  stage.py
scripts/sweep/reference/: OrgCodeRefRunner.java  PackAssets.java  PackSounds.java  RefRunner.java
scripts/sweep/reference/shim/org/code/protocol/: ContentManager.java  GlobalProtocol.java  InternalExceptionKey.java  InternalServerRuntimeException.java  JavabuilderContext.java  JavabuilderRuntimeException.java
scripts/sweep/reference/shim/org/json/: JSONArray.java  JSONException.java  JSONObject.java  JSONTokener.java
scripts/sweep/reference/stub/org/code/theater/: Instrument.java  Scene.java  Theater.java
specs/: EXECUTION.md  LANGUAGE.md  RUNTIME.md  SCOPE.md  VALIDATION.md
tools/: FloatCorpus.java  README.md
