[workspace]
resolver = "3"
members = [
    "crates/jvmjs-classfile",
    "crates/jvmjs-compiler",
    "crates/jvmjs-vm",
    "crates/jvmjs-wasm",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
license = "MIT"
repository = "https://github.com/wilkie/jvmjs"

[workspace.dependencies]
jvmjs-classfile = { path = "crates/jvmjs-classfile" }
jvmjs-compiler = { path = "crates/jvmjs-compiler" }
jvmjs-vm = { path = "crates/jvmjs-vm" }
thiserror = "2"
indexmap = "2"

[workspace.lints.rust]
unsafe_code = "warn"
missing_debug_implementations = "warn"
unused_qualifications = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Pedantic exceptions that fight idiomatic VM/compiler code:
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
cast_possible_truncation = "allow"

# Small, fast-loading WASM output for release builds.
[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
