[package]
name = "caturra-classfile"
description = "JVM class file model, reader, and writer (targeting Java 11 / class file version 55)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
thiserror.workspace = true
indexmap.workspace = true

[lints]
workspace = true
