[package]
name = "caturra-vm"
description = "Bytecode interpreter and runtime: threads of execution, heap, virtual filesystem, and console IO"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
typed-arena = "2"
caturra-classfile.workspace = true
thiserror.workspace = true
indexmap.workspace = true

[dev-dependencies]
# For end-to-end "compile then run" integration tests only.
caturra-compiler.workspace = true
# Reads the compatibility manifest the demo page publishes (compat_manifest.rs).
serde_json = "1"

[lints]
workspace = true
