[package]
name = "jvmjs-vm"
description = "Bytecode interpreter and runtime: threads of execution, heap, virtual filesystem, and console IO"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
typed-arena = "2"
jvmjs-classfile.workspace = true
thiserror.workspace = true
indexmap.workspace = true

[dev-dependencies]
# For end-to-end "compile then run" integration tests only.
jvmjs-compiler.workspace = true

[lints]
workspace = true
