[package]
name = "jvmjs-wasm"
description = "WebAssembly boundary: exposes the compiler (javac), VM (java), virtual filesystem, and console IO to JavaScript"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
jvmjs-classfile.workspace = true
jvmjs-compiler.workspace = true
jvmjs-vm.workspace = true
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"

[lints]
workspace = true

# Rust emits bulk-memory and nontrapping float-to-int instructions by
# default; wasm-pack's bundled wasm-opt needs them enabled explicitly.
[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O", "--enable-bulk-memory", "--enable-nontrapping-float-to-int", "--enable-sign-ext"]
